--- a/src/Components/all.css
+++ b/src/Components/all.css
@@ -2,35 +2,40 @@
 .valuebox {
     width: 100px;
     height: 100px;
-    font-size: 24px;
+    font-size: 48px;
     font-weight: bold;
     text-align: center;
-    background-color: #141313;
+    background-color: #eceaea;
     border: 1px solid #e0dbdb;
-    color: wheat;
+    color: rgb(8, 8, 7);
     border-radius: 50px;
     cursor: pointer;
     margin: 5px;
     outline: none;
   }
+  .game{
+    padding:  1% 10%;
+    background-color: black;
+    width: max-content;
+    height: max-content;
+    margin: 0% 30%;
+   
+  }
   
   .valuebox:hover {
-    background-color: #534d4d;
+    background-color: #d7c9c9;
   }
   
   .valuebox:active {
     background-color: #bbb;
   }
-  
-  /* Styling for the board rows */
   .row {
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
   }
-  
-  /* Styling for the status message */
   .status {
+    color: white;
     font-size: 20px;
     margin-bottom: 20px;
     text-align: center;
@@ -42,8 +47,6 @@
     margin-bottom: 20px;
     text-align: center;
   }
-  
-  /* Styles for the reset button */
   .reset-button {
     margin-top: 20px;
     padding: 10px 20px;
